[package]
name = "wasm-web-api"
version = "0.1.0"
authors = ["Georgiy Malinovskiy <post@gmalinovskiy.su>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

